--- a/ImageDefinition/Dockerfile
+++ b/ImageDefinition/Dockerfile
@@ -65,7 +65,7 @@ RUN wget https://bootstrap.pypa.io/get-pip.py && \
     pip install spython && \
     pip install openschemas && \
     pip install schemaorg && \
-    chmod u+x /code/entrypoint.sh && \
+    chmod u+x entrypoint.sh && \
     mkdir -p /root/.docker && \
     echo {} > /root/.docker/config.json
 
